Add Proxima Nova font and update font-family references in CSS

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="styles.css">
     <!-- Charity: water uses Montserrat, so we use it from Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
+    <!-- Proxima Nova is a commercial font; for demo, fallback to Montserrat and system fonts -->
+    <style>
+      @font-face {
+        font-family: 'Proxima Nova';
+        src: local('Proxima Nova'), local('ProximaNova');
+        font-display: swap;
+      }
+    </style>
 </head>
 <body>
     <div id="game-container">
